--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -2,6 +2,14 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools">
 
+    <uses-permission android:name="android.permission.BLUETOOTH_CONNECT" />
+    <uses-permission android:name="android.permission.BLUETOOTH"/>
+    <uses-permission android:name="android.permission.BLUETOOTH_ADMIN"/>
+    <uses-permission android:name="android.permission.ACCESS_COARSE_LOCATION"/>
+    <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION"/>
+    <uses-permission android:name="android.permission.ACCESS_BACKGROUND_LOCATION"/>
+    <uses-permission android:name="android.permission.BLUETOOTH_SCAN" />
+
     <application
         android:allowBackup="true"
         android:dataExtractionRules="@xml/data_extraction_rules"
@@ -12,6 +20,10 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.RIMSupervision"
         tools:targetApi="31">
+        <activity
+            android:name=".BLEActivity"
+            android:exported="false"
+            android:theme="@style/Theme.RIMSupervision" />
         <activity
             android:name=".PredictActivity"
             android:exported="false" />
@@ -34,5 +46,7 @@
             </intent-filter>
         </activity>
     </application>
+
+
 
 </manifest>
